bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: ';' expected but string literal found.
while (x==false) {if (litMessge)=="R" {droite(); avance()}
                                  ^